create project with CLI

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <button v-on:click="addComment" type="submit" class="btn btn-primary">Comentar</button>
       </div>
       <div class="list-group" style="margin-top: 15px">
-        <div class="list-group-item" v-for="(comment, index) in comments">
+        <div class="list-group-item" v-for="(comment, index) in allComments">
           <span class="comment__author"
             >Autor: <strong>{{comment.name}}</strong></span
           >
           <p>{{comment.message}}</p>
           <div>
-            <a href="#" title="Excluir" v-on:click="removeComment(index)">Excluir</a>
+            <a href="#" title="Excluir" v-on:click.prevent="removeComment(index)">Excluir</a>
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
         },
         methods: {
           addComment() {
-            if (this.name.trim() === "" || this.message.trim() === "") {
+            if (this.message.trim() === "") {
               return;
             }
             this.comments.push({
@@ -75,6 +75,19 @@
           },
           removeComment(index) {
             this.comments.splice(index, 1);
+          },
+        },
+        computed: {
+          allComments() {
+            return this.comments.map((comment) => ({
+              ...comment,
+              name: comment.name.trim() === "" ? "Anônimo" : comment.name,
+            }));
+          },
+        },
+        watch: {
+          comments(val) {
+            console.log(val);
           },
         },
       });
